--- a/web-design/css/component/style.css
+++ b/web-design/css/component/style.css
@@ -2,6 +2,7 @@
 
 @import './accordion.css';
 @import './badge.css';
+@import './box.css';
 @import './breadcrumb.css';
 @import './card-list.css';
 @import './console.css';
