--- a/web-design/css/component/horizontal-list.css
+++ b/web-design/css/component/horizontal-list.css
@@ -37,6 +37,7 @@
     width: 100%;
 }
 .horizontal-list > .item {
+    background-color: var(--nkw-color-light-gray);
     border-top: 1px solid var(--nkw-color-light-gray);
     box-sizing: border-box;
     display: -webkit-flex;
@@ -50,7 +51,12 @@
     box-sizing: border-box;
     height: auto;
     overflow: hidden;
-    width: 170px;
+    width: 100px;
+}
+@media screen and (min-width: 600px) {
+    .horizontal-list > .item > .img-box {
+        width: 170px;
+    }
 }
 .horizontal-list > .item > .img-box > .link {
     display: inline-block;
@@ -77,7 +83,6 @@
     transform: scale(1.1);
 }
 .horizontal-list > .item > .content-box {
-    background-color: var(--nkw-color-light-gray);
     box-sizing: border-box;
     flex: 1 1;
     padding: 10px;
