--- a/web-design/css/component/style.css
+++ b/web-design/css/component/style.css
@@ -11,6 +11,7 @@
 @import './horizontal-list.css';
 @import './image-box.css';
 @import './image-list.css';
+@import './pricing-box.css';
 @import './profile-card.css';
 @import './table.css';
 @import './text-with-icon.css';
